syntax = "proto3";

import "tracer.proto";

// Tracers server service specification.
service Tracers {

  // Returns the available tracer languages
  rpc getLanguages(Empty) returns (Languages);

  // Returns the current running sessions.
  rpc getSessions(Empty) returns (Sessions);

  // Session related methods
  //
  rpc start(StartRequest) returns (StartResponse);
  rpc stop(Id) returns (Empty);
  rpc step(Id) returns (TracerResponse);
  rpc stepOver(Id) returns (TracerResponse);
  rpc stepOut(Id) returns (TracerResponse);
  rpc continue(Id) returns (TracerResponse);
  rpc input(Action.Input) returns (Empty);
  rpc getBreakpoints(Empty) returns (Breakpoints);
  rpc setBreakpoints(Breakpoints) returns (Empty);
}

message Empty {}

message Id { int32 number = 1; }

message Languages { repeated string languages = 1; }

message Sessions { repeated Session sessions = 1; }

message Session {
  Id id = 1;
  string language = 2;
}

message StartRequest {
  string language = 1;
  Action.Start start = 2;
}

message InputRequest {
  Id id = 1;
  Action.Input input = 2;
}

message StartResponse {
  Session session = 1;
  TracerResponse response = 2;
}

message Breakpoints { repeated int32 lines = 1; }
